--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
         <div class="tab-content mt-3">
           <!-- Step 1: Connection Info -->
           <div class="tab-pane fade show active" id="step1">
+            <p>If you want to change SMTP, you can setup it according to your preference.</p>
             <div class="mb-3">
               <label for="host" class="form-label">Host</label>
               <input type="text" class="form-control" id="host"
@@ -67,6 +68,7 @@
 
           <!-- Step 2: Email Info -->
           <div class="tab-pane fade" id="step2">
+            <p>Enter your email address, my email is added here by default.</p>
             <div class="mb-3">
               <label for="to" class="form-label">From</label>
               <input type="email" class="form-control" id="to"
