server link change

--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
 
 
       // Simulate sending the data to the server (e.g., using fetch)
-      fetch('http://localhost:3000/send-email', {
+      fetch('https://nodemailer-server-zr3y.onrender.com/send-email', {
         method: 'POST',
         headers: {
           'Content-Type': 'application/json',
