--- a/index.html
+++ b/index.html
@@ -3,7 +3,14 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contact Form</title>
+    <meta name="twitter:title" content="Send Email With your SMTP Configuration">
+    <meta name="twitter:description"
+      content="Send Email With your SMTP Configuration">
+    <meta name="twitter:image"
+      content="/img/social-media-image.png">
+    <meta name="twitter:card" content="summary_large_image">
+    <link rel="icon" type="image/x-icon" href="/img/favicon.png">
+    <title>Send Email With your SMTP Configuration</title>
     <!-- Bootstrap CSS -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
@@ -28,12 +35,13 @@
         <div class="tab-content mt-3">
           <!-- Step 1: Connection Info -->
           <div class="tab-pane fade show active" id="step1">
-            <p>If you want to change SMTP, you can setup it according to your preference.</p>
+            <p>If you want to change SMTP, you can setup it according to your
+              preference.</p>
             <div class="mb-3">
               <label for="host" class="form-label">Host</label>
               <input type="text" class="form-control" id="host"
                 placeholder="Enter Host" required>
-                <p class="pt-1 small">Test Host: smtppro.zoho.com</p>
+              <p class="pt-1 small">Test Host: smtppro.zoho.com</p>
             </div>
             <fieldset class="mb-3">
               <legend class="form-label">Select Port</legend>
@@ -54,13 +62,13 @@
               <label for="user_email" class="form-label">Email</label>
               <input type="text" class="form-control" id="user_email"
                 placeholder="Enter User Email" required>
-                <p class="pt-1 small">Test Email: support@bitapps.pro</p>
+              <p class="pt-1 small">Test Email: support@bitapps.pro</p>
             </div>
             <div class="mb-3">
               <label for="pass" class="form-label">Password</label>
               <input type="password" class="form-control" id="pass"
                 placeholder="Enter Password" required>
-                <p class="pt-1 small">Test Password: GsjNzh1c1RUd</p>
+              <p class="pt-1 small">Test Password: GsjNzh1c1RUd</p>
             </div>
             <!-- <button type="button" class="btn btn-primary" data-bs-toggle="pill"
               href="#step2">Next</button> -->
