favicon and social media image link fixed

--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
     <meta name="twitter:description"
       content="Send Email With your SMTP Configuration">
     <meta name="twitter:image"
-      content="/img/social-media-image.png">
+      content="./img/social-media-image.png">
     <meta name="twitter:card" content="summary_large_image">
-    <link rel="icon" type="image/x-icon" href="/img/favicon.png">
+    <link rel="icon" type="image/x-icon" href="./img/favicon.png">
     <title>Send Email With your SMTP Configuration</title>
     <!-- Bootstrap CSS -->
     <link
