--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="twitter:description"
       content="Send Email With your SMTP Configuration">
     <meta name="twitter:image"
-      content="./img/social-media-image.png">
+      content="https://i.imgur.com/H46UP4Z.png">
     <meta name="twitter:card" content="summary_large_image">
     <link rel="icon" type="image/x-icon" href="./img/favicon.png">
     <title>Send Email With your SMTP Configuration</title>
