--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta property="og:title" content="Send Email With your SMTP Configuration" />
     <meta property="og:description" content="Send Email With your SMTP Configuration" />
-    <meta property="og:image" content="./img/social-media-image.png" />
+    <meta property="og:image" content="/img/social-media-image.png" />
     <meta name="twitter:title"
       content="Send Email With your SMTP Configuration">
     <meta name="twitter:description"
       content="Send Email With your SMTP Configuration">
     <meta name="twitter:image"
-      content="./img/social-media-image.png">
+      content="/img/social-media-image.png">
     <meta name="twitter:card" content="summary_large_image">
     <link rel="icon" type="image/x-icon" href="./img/favicon.png">
     <title>Send Email With your SMTP Configuration</title>
